<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent">

        </androidx.appcompat.widget.Toolbar>

        <TextView
                style="@style/TitleTextView"
                android:text="@string/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"/>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/OutLineEditText"
                android:hint="@string/email"
                android:layout_marginEnd="20dp">

            <com.google.android.material.textfield.TextInputEditText
                    style="@style/MaterialEditText"
                    android:id="@+id/etEmail"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/OutLineEditText"
                android:hint="@string/password"
                app:layout_constraintTop_toBottomOf="@+id/tilLastName"
                android:layout_marginEnd="20dp">

            <com.google.android.material.textfield.TextInputEditText
                    style="@style/MaterialEditText"
                    android:id="@+id/etPassword"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button style="@style/BtnBorder"
                android:id="@+id/btnAuth"
                android:text="@string/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tilPassword"
                app:layout_constraintEnd_toEndOf="@+id/tilFirstname"
                app:layout_constraintStart_toStartOf="@+id/tilFirstname"/>

        <TextView android:id="@+id/tvReg"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="14sp"
                  android:layout_marginTop="10dp"
                  android:layout_gravity="center"
                  android:textColor="@color/black"
                  android:text="@string/no_account"
             />
    </LinearLayout>
</ScrollView>
