<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

        <TextView
                style="@style/TitleTextView"
                android:text="@string/registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilFirstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/OutLineEditText"
                android:hint="@string/name"
                app:layout_constraintBottom_toTopOf="@+id/tilSecondName">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFirstname"
                    style="@style/MaterialEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilSecondName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/OutLineEditText"
                android:hint="@string/secondname"
                app:layout_constraintBottom_toTopOf="@+id/tilLastName">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSecondName"
                    style="@style/MaterialEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/OutLineEditText"
                android:hint="@string/lastname"
                android:layout_marginEnd="20dp">

            <com.google.android.material.textfield.TextInputEditText
                    style="@style/MaterialEditText"
                    android:id="@+id/etLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/OutLineEditText"
                android:hint="@string/email"
                android:layout_marginEnd="20dp">

            <com.google.android.material.textfield.TextInputEditText
                    style="@style/MaterialEditText"
                    android:id="@+id/etEmail"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/OutLineEditText"
                android:hint="@string/password"
                app:layout_constraintTop_toBottomOf="@+id/tilLastName"
                android:layout_marginEnd="20dp">

            <com.google.android.material.textfield.TextInputEditText
                    style="@style/MaterialEditText"
                    android:id="@+id/etPassword"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
                android:id="@+id/llChoosePayType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:orientation="horizontal"
                android:background="@drawable/background_payment_type"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="12dp"
                app:layout_constraintHorizontal_bias="0.0">

            <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinnerUniversities"
                    android:textColor="@color/white"
                    android:popupBackground="@color/white"
                    android:background="@android:color/transparent"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight="0"
                       android:layout_gravity="center"
                       android:layout_marginRight="@dimen/padding_15"
                       android:src="@drawable/ic_down"/>
        </LinearLayout>

        <Button style="@style/BtnBorder"
                android:id="@+id/btnReg"
                android:text="@string/registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tilPassword"
                app:layout_constraintEnd_toEndOf="@+id/tilFirstname"
                app:layout_constraintStart_toStartOf="@+id/tilFirstname"/>
    </LinearLayout>
</ScrollView>
